--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,22 @@
 
   <body>
     <main class="container mx-auto mt-28 px-5 flex">
+      <% if notice.present? %>
+        <p
+          class="py-2 px-3 bg-green-50 mb-5 text-green-500 font-medium rounded-lg inline-block"
+          id="notice"
+        >
+          <%= notice %>
+        </p>
+      <% elsif alert.present? %>
+        <p
+          class="py-2 px-3 bg-green-50 mb-5 text-green-500 font-medium rounded-lg inline-block"
+          id="alert"
+        >
+          <%= alert %>
+        </p>
+      <% end %>
+
       <%= yield %>
     </main>
   </body>
