--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,6 +31,11 @@
           HOTWallets
         </div>
       <% end %>
+
+      <!-- Sign out button -->
+      <div class="ml-auto">
+        <%= button_to 'Sign out', destroy_user_session_path, method: :delete, class: 'text-gray-700' %>
+      </div>
     </header>
 
     <main class="container mx-auto mt-28 px-5 flex">
