--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,7 +48,7 @@
         </p>
       <% elsif alert.present? %>
         <p
-          class="py-2 px-3 bg-green-50 mb-5 text-green-500 font-medium rounded-lg inline-block"
+            class="py-2 px-3 bg-red-50 mb-5 text-red-500 font-medium rounded-lg inline-block"
           id="alert"
         >
           <%= alert %>
