Use a parent div for notice and alert p elements
It is conventional

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,19 +42,23 @@
 
     <main class="container mx-auto mt-28 px-5 flex">
       <% if notice.present? %>
-        <p
-          class="py-2 px-3 bg-green-50 mb-5 text-green-500 font-medium rounded-lg inline-block"
-          id="notice"
-        >
-          <%= notice %>
-        </p>
+        <div>
+          <p
+            class="py-2 px-3 bg-green-50 mb-5 text-green-500 font-medium rounded-lg inline-block"
+            id="notice"
+          >
+            <%= notice %>
+          </p>
+        </div>
       <% elsif alert.present? %>
-        <p
+        <div>
+          <p
             class="py-2 px-3 bg-red-50 mb-5 text-red-500 font-medium rounded-lg inline-block"
-          id="alert"
-        >
-          <%= alert %>
-        </p>
+            id="alert"
+          >
+            <%= alert %>
+          </p>
+        </div>
       <% end %>
 
       <%= yield %>
