Use current context of category in form

--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -24,7 +24,7 @@
       form.select(
         :context,
         [['Income', 'income'], ['Expense', 'expense']],
-        selected: 'income',
+        selected: category.context,
         class: 'block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full'
       )
     %>
