Use fuchsia-600 as the primary color

--- a/app/views/transactions/index.html.erb
+++ b/app/views/transactions/index.html.erb
@@ -5,7 +5,7 @@
       link_to(
         "New transaction",
         new_transaction_path,
-        class: 'rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium'
+        class: 'rounded-lg py-3 px-5 bg-fuchsia-600 text-white block font-medium'
       )
     %>
   </div>
