--- a/app/views/wallets/index.html.erb
+++ b/app/views/wallets/index.html.erb
@@ -1,7 +1,9 @@
 <div class="w-full">
   <div class="flex justify-between items-center">
     <h1 class="font-bold text-4xl">Wallets</h1>
-    <%= link_to 'New wallet', new_wallet_path, class: 'rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium' %>
+    <%=
+      link_to 'New wallet', new_wallet_path, class: 'rounded-lg py-3 px-5 bg-fuchsia-600 text-white block font-medium'
+    %>
   </div>
 
   <div id="wallets" class="min-w-full">
