--- a/app/views/wallets/_wallet.html.erb
+++ b/app/views/wallets/_wallet.html.erb
@@ -1,8 +1,7 @@
 <div id="<%= dom_id wallet %>">
-  <p class="my-5">
-    <strong class="block font-medium mb-1">Name:</strong>
-    <%= wallet.name %>
-  </p>
+  <div class="my-5">
+    <div class="font-medium text-2xl"><%= wallet.name %></div>
+  </div>
 
   <div class="my-5">
     <%=
