--- a/app/views/transactions/_form.html.erb
+++ b/app/views/transactions/_form.html.erb
@@ -14,7 +14,23 @@
   <div class="my-5">
     <%= form.label :name %>
     <%=
-      form.text_field :name, class: 'block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full'
+      form.text_field(
+        :name,
+        class: %w(
+          block
+          shadow
+          rounded-md
+          border
+          border-gray-200
+          outline-none
+          px-3
+          py-2
+          mt-2
+          w-full
+          focus:border-fuchsia-600
+          focus:ring-fuchsia-600
+        )
+      )
     %>
   </div>
 
@@ -24,7 +40,23 @@
       form.select(
         :category_id,
         Category.all.collect {|category| [category.name, category.id]},
-        class: 'block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full'
+        {},
+        {
+          class: %w(
+            block
+            shadow
+            rounded-md
+            border
+            border-gray-200
+            outline-none
+            px-3
+            py-2
+            mt-2
+            w-full
+            focus:border-fuchsia-600
+            focus:ring-fuchsia-600
+          )
+        }
       )
     %>
   </div>
@@ -32,7 +64,23 @@
   <div class="my-5">
     <%= form.label :price %>
     <%=
-      form.text_field :price, class: 'block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full'
+      form.text_field(
+        :price,
+        class: %w(
+          block
+          shadow
+          rounded-md
+          border
+          border-gray-200
+          outline-none
+          px-3
+          py-2
+          mt-2
+          w-full
+          focus:border-fuchsia-600
+          focus:ring-fuchsia-600
+        )
+      )
     %>
   </div>
 
@@ -42,7 +90,23 @@
       form.select(
         :wallet_id,
         Wallet.all.collect {|wallet| [wallet.name, wallet.id]},
-        class: 'block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full'
+        {},
+        {
+          class: %w(
+            block
+            shadow
+            rounded-md
+            border
+            border-gray-200
+            outline-none
+            px-3
+            py-2
+            mt-2
+            w-full
+            focus:border-fuchsia-600
+            focus:ring-fuchsia-600
+          )
+        }
       )
     %>
   </div>
