--- a/app/views/wallets/_form.html.erb
+++ b/app/views/wallets/_form.html.erb
@@ -14,7 +14,23 @@
   <div class="my-5">
     <%= form.label :name %>
     <%=
-      form.text_field :name, class: 'block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full'
+      form.text_field(
+        :name,
+        class: %w(
+          block
+          shadow
+          rounded-md
+          border
+          border-gray-200
+          outline-none
+          px-3
+          py-2
+          mt-2
+          w-full
+          focus:border-fuchsia-600
+          focus:ring-fuchsia-600
+        )
+      )
     %>
   </div>
 
