--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,5 +1,15 @@
-<p>Welcome <%= @email %>!</p>
+<div class="mx-auto md:w-2/3 w-full">
+  <p>Welcome <%= @email %>!</p>
 
-<p>You can confirm your account email through the link below:</p>
+  <p>You can confirm your account email through the link below:</p>
 
-<p><%= link_to 'Confirm my account', confirmation_url(@resource, confirmation_token: @token) %></p>
+  <p>
+    <%=
+      link_to(
+        'Confirm my account',
+        confirmation_url(@resource, confirmation_token: @token),
+        class: 'ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium'
+      )
+    %>
+  </p>
+</div>
