--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,18 @@
-<p>Hello <%= @resource.email %>!</p>
+<div class="mx-auto md:w-2/3 w-full">
+  <p>Hello <%= @resource.email %>!</p>
 
-<p>Someone has requested a link to change your password. You can do this through the link below.</p>
+  <p>Someone has requested a link to change your password. You can do this through the link below.</p>
 
-<p><%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token) %></p>
+  <p>
+    <%=
+      link_to(
+        'Change my password',
+        edit_password_url(@resource, reset_password_token: @token),
+        class: 'ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium'
+      )
+    %>
+  </p>
 
-<p>If you didn't request this, please ignore this email.</p>
-<p>Your password won't change until you access the link above and create a new one.</p>
+  <p>If you didn't request this, please ignore this email.</p>
+  <p>Your password won't change until you access the link above and create a new one.</p>
+</div>
