--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,25 +1,79 @@
-<h2>Change your password</h2>
+<div class="mx-auto md:w-2/3 w-full">
+  <div class="font-bold text-4xl">Change your password</div>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-  <%= f.hidden_field :reset_password_token %>
+  <%=
+    form_with(
+      model: resource,
+      scope: resource_name,
+      url: password_path(resource_name),
+      method: :put,
+      class: 'contents'
+    ) do |f|
+  %>
+    <%= render "devise/shared/error_messages", resource: resource %>
+    <%= f.hidden_field :reset_password_token %>
 
-  <div class="field">
-    <%= f.label :password, "New password" %><br />
-    <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em><br />
-    <% end %>
-    <%= f.password_field :password, autofocus: true, autocomplete: "new-password" %>
-  </div>
+    <div class="field my-5">
+      <%= f.label :password, "New password" %>
+      <% if @minimum_password_length %>
+        <em>(<%= @minimum_password_length %> characters minimum)</em>
+      <% end %>
+      <%=
+        f.password_field(
+          :password,
+          autofocus: true,
+          autocomplete: "new-password",
+          class: %w(
+            block
+            shadow
+            rounded-md
+            border
+            border-gray-200
+            outline-none
+            px-3
+            py-2
+            mt-2
+            w-full
+            focus:border-fuchsia-600
+            focus:ring-fuchsia-600
+          )
+        )
+      %>
+    </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation, "Confirm new password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
+    <div class="field my-5">
+      <%= f.label :password_confirmation, "Confirm new password" %>
+      <%=
+        f.password_field(
+          :password_confirmation,
+          autocomplete: "new-password",
+          class: %w(
+            block
+            shadow
+            rounded-md
+            border
+            border-gray-200
+            outline-none
+            px-3
+            py-2
+            mt-2
+            w-full
+            focus:border-fuchsia-600
+            focus:ring-fuchsia-600
+          )
+        )
+      %>
+    </div>
 
-  <div class="actions">
-    <%= f.submit "Change my password" %>
-  </div>
-<% end %>
+    <div class="actions inline">
+      <%=
+        f.submit(
+          "Change my password",
+          class: 'rounded-lg py-3 px-5 bg-fuchsia-600 text-white inline-block font-medium cursor-pointer'
+        )
+      %>
+    </div>
+  <% end %>
 
-<%= render "devise/shared/links" %>
+  <%= render "devise/shared/links" %>
+</div>
