--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,51 @@
-<h2>Forgot your password?</h2>
+<div class="mx-auto md:w-2/3 w-full">
+  <div class="font-bold text-4xl">Forgot your password?</div>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+  <%=
+    form_with(
+      model: resource,
+      scope: resource_name,
+      url: password_path(resource_name),
+      method: :post,
+      class: 'contents'
+    ) do |f|
+  %>
+    <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+    <div class="field my-5">
+      <%= f.label :email %>
+      <%=
+        f.email_field(
+          :email,
+          autofocus: true,
+          autocomplete: "email",
+          class: %w(
+            block
+            shadow
+            rounded-md
+            border
+            border-gray-200
+            outline-none
+            px-3
+            py-2
+            mt-2
+            w-full
+            focus:border-fuchsia-600
+            focus:ring-fuchsia-600
+          )
+        )
+      %>
+    </div>
 
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
-<% end %>
+    <div class="actions inline">
+      <%=
+        f.submit(
+          "Send me reset password instructions",
+          class: 'rounded-lg py-3 px-5 bg-fuchsia-600 text-white inline-block font-medium cursor-pointer'
+        )
+      %>
+    </div>
+  <% end %>
 
-<%= render "devise/shared/links" %>
+  <%= render "devise/shared/links" %>
+</div>
