--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,96 @@
-<h2>Sign up</h2>
+<div class="mx-auto md:w-2/3 w-full">
+  <div class="font-bold text-4xl">Sign up</div>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+  <%=
+    form_with(model: resource, scope: resource_name, url: registration_path(resource_name), class: 'contents') do |f|
+  %>
+    <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+    <div class="field my-5">
+      <%= f.label :email %>
+      <%=
+        f.email_field(
+          :email,
+          autofocus: true,
+          autocomplete: "email",
+          class: %w(
+            block
+            shadow
+            rounded-md
+            border
+            border-gray-200
+            outline-none
+            px-3
+            py-2
+            mt-2
+            w-full
+            focus:border-fuchsia-600
+            focus:ring-fuchsia-600
+          )
+        )
+      %>
+    </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
+    <div class="field my-5">
+      <%= f.label :password %>
+      <% if @minimum_password_length %>
+      <em>(<%= @minimum_password_length %> characters minimum)</em>
+      <% end %>
+      <%=
+        f.password_field(
+          :password,
+          autocomplete: "new-password",
+          class: %w(
+            block
+            shadow
+            rounded-md
+            border
+            border-gray-200
+            outline-none
+            px-3
+            py-2
+            mt-2
+            w-full
+            focus:border-fuchsia-600
+            focus:ring-fuchsia-600
+          )
+        )
+      %>
+    </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
+    <div class="field my-5">
+      <%= f.label :password_confirmation %>
+      <%=
+        f.password_field(
+          :password_confirmation,
+          autocomplete: "new-password",
+          class: %w(
+            block
+            shadow
+            rounded-md
+            border
+            border-gray-200
+            outline-none
+            px-3
+            py-2
+            mt-2
+            w-full
+            focus:border-fuchsia-600
+            focus:ring-fuchsia-600
+          )
+        )
+      %>
+    </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
+    <div class="actions inline">
+      <%=
+        f.submit(
+          "Sign up",
+          class: 'rounded-lg py-3 px-5 bg-fuchsia-600 text-white inline-block font-medium cursor-pointer'
+        )
+      %>
+    </div>
+  <% end %>
 
-<%= render "devise/shared/links" %>
+  <%= render "devise/shared/links" %>
+</div>
