--- a/app/views/devise/shared/_error_messages.html.erb
+++ b/app/views/devise/shared/_error_messages.html.erb
@@ -1,14 +1,14 @@
 <% if resource.errors.any? %>
   <div id="error_explanation">
-    <h2>
+    <div class="font-bold text-3xl">
       <%= I18n.t("errors.messages.not_saved",
                  count: resource.errors.count,
                  resource: resource.class.model_name.human.downcase)
        %>
-    </h2>
-    <ul>
+    </div>
+    <ul class="py-2 px-3 bg-red-50 mb-5 rounded-lg">
       <% resource.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
+        <li class="text-red-500 font-medium inline-block"><%= message %></li>
       <% end %>
     </ul>
   </div>
