--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -1,7 +1,9 @@
 <%= form_with(model: category, class: 'contents') do |form| %>
   <% if category.errors.any? %>
     <div id="error_explanation" class="bg-red-50 text-red-500 px-3 py-2 font-medium rounded-lg mt-3">
-      <h2><%= pluralize(category.errors.count, "error") %> prohibited this category from being saved:</h2>
+      <div class="font-medium text-2xl">
+        <%= pluralize(category.errors.count, "error") %> prohibited this category from being saved:
+      </div>
 
       <ul>
         <% category.errors.each do |error| %>
