--- a/app/views/devise/shared/_error_messages.html.erb
+++ b/app/views/devise/shared/_error_messages.html.erb
@@ -1,14 +1,14 @@
 <% if resource.errors.any? %>
-  <div id="error_explanation">
-    <div class="font-bold text-3xl">
+  <div id="error_explanation" class="bg-red-50 text-red-500 px-3 py-2 font-medium rounded-lg mt-3">
+    <div class="font-medium text-2xl">
       <%= I18n.t("errors.messages.not_saved",
                  count: resource.errors.count,
                  resource: resource.class.model_name.human.downcase)
        %>
     </div>
-    <ul class="py-2 px-3 bg-red-50 mb-5 rounded-lg">
+    <ul>
       <% resource.errors.full_messages.each do |message| %>
-        <li class="text-red-500 font-medium inline-block"><%= message %></li>
+        <li><%= message %></li>
       <% end %>
     </ul>
   </div>
