--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,7 +49,7 @@
       </div>
     </header>
 
-    <main class="container mx-auto mt-28 px-5 flex flex-col items-center">
+    <main class="container mx-auto mt-28 mb-6 px-5 flex flex-col items-center">
       <% if notice.present? %>
         <div>
           <p
