Add system tests for root page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
           <div>
             <%= image_tag 'logo.svg', alt: 'Logo' %>
           </div>
-          <div class="ml-2 text-3xl text-fuchsia-600 font-semibold">
+          <div class="ml-2 text-3xl text-fuchsia-600 font-semibold" id="brand">
             HOTWallets
           </div>
         <% end %>
