Disable turbo for the Destroy Registration request
Devise isn't compatible with Turbo right now

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -134,7 +134,7 @@
       button_to(
         "Cancel my account",
         registration_path(resource_name),
-        data: { confirm: "Are you sure?" },
+        data: { turbo: false },
         method: :delete,
         class: 'text-gray-700'
       )
